# mail_analysis

./: .flake8  LICENSE  README.md  mypy.ini  noxfile.py  pylintrc  pyproject.toml  pytype.cfg  requirements.txt
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
src/: __main__.py  mail_data.py
