[tool.poetry]
name = "mail_analysis"
version = "0.1.0"
description = ""
authors = ["Robin Maasjosthusmann <robin@maasjosthusmann.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.6"
pandas = "^1.3.5"
seaborn = "^0.11.2"
numpy = "^1.21.5"
matplotlib = "geopandas"
geopandas = "^0.10.2"
pycountry = "^20.7.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.5"
black = "nox"
flake8-docstrings = "^1.6.0"
pylint = "^2.12.2"
mypy = "^0.930"
safety = "^1.10.3"
pytype = "^2021.12.15"
nox = "^2021.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
